:recycle: Fix names.

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,8 +1,8 @@
 {{- $email := promptString "Git email address for the author/committer" -}}
 {{- $name := promptString "Git username for the author/committer" -}}
 {{- $gpgPath := promptString "Path of gpg.exe" -}}
-{{- $envPath := promptString "Path for conda environments" -}}
-{{- $pkgPath := promptString "Path for conda packages" -}}
+{{- $envDir := promptString "Directory for conda environments" -}}
+{{- $pkgPDir := promptString "Directory for conda packages" -}}
 
 sourceDir = {{ .chezmoi.sourceDir | quote }}
 
@@ -10,5 +10,5 @@ sourceDir = {{ .chezmoi.sourceDir | quote }}
 	name = "{{ $name }}"
     email = "{{ $email }}"
 	gpgPath = "{{ $gpgPath }}"
-	envPath = "{{ $envPath }}"
-	pkgPath = "{{ $pkgPath }}"
+	envDir = "{{ $envDir }}"
+	pkgDir = "{{ $pkgDir }}"
