Add conditional logic for conda dirs.

--- a/dot_condarc.tmpl
+++ b/dot_condarc.tmpl
@@ -14,9 +14,11 @@ create_default_packages:
 pip_interop_enabled: true
 channel_priority: flexible
 unsatisfiable_hints: true
-
+{{if .envdir}}
 envs_dirs:
   - {{ .envdir }}
-
+{{end}}
+{{if .pkgdir}}
 pkgs_dirs:
   - {{ .pkgdir }}
+{{end}}
