:bug: Fix case.

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -1,7 +1,7 @@
 [user]
 	name = {{ .name }}
 	email = {{ .email }}
-	signingkey = {{ .gpgKey }}
+	signingkey = {{ .gpgkey }}
 [core]
 	excludesFile = C:/Users/Ajay/.gitignore
 	editor = 'C:/Program Files/Notepad++/Notepad++.exe' -multiInst -notabbar -nosession -noPlugin
@@ -208,7 +208,7 @@
 [commit]
 	gpgsign = true
 [gpg]
-	program = {{ .gpgPath }}
+	program = {{ .gpgpath }}
 [color]
 	ui = true
 [color "diff-highlight"]
