--- a/home/dot_npmrc.tmpl
+++ b/home/dot_npmrc.tmpl
@@ -1,10 +1,6 @@
 # https://docs.npmjs.com/cli/v8/using-npm/config
-{{ if .npmcache }}
-cache = {{ .npmcache }}
-{{ end }}
+{{ if .npmcache }}cache = {{.npmcache | quote }}{{ end }}
 msvs_version = 2017
-{{ if .npmprefix }}
-prefix = {{ .npmprefix }}
-{{ end }}
+{{ if .npmprefix }}prefix = {{ .npmprefix | quote }}{{ end }}
 shell = "pwsh.exe"
 unicode = true
