--- a/home/AppData/Roaming/NuGet/NuGet.Config.tmpl
+++ b/home/AppData/Roaming/NuGet/NuGet.Config.tmpl
@@ -9,9 +9,7 @@
 	</packageRestore>
 	<config>
 		<!-- https://docs.microsoft.com/en-us/nuget/consume-packages/managing-the-global-packages-and-cache-folders -->
-		{{ if .nugetpkgs }}{{"		<add key=\"repositoryPath\" value=\"{{.nugetpkgs}}\" />"}}{{ end }}
-		<!-- Override using the NUGET_PACKAGES environment variable -->
-		{{ if .nugetpkgs }}{{"		<add key=\"globalPackagesFolder\" value=\"{{.nugetpkgs}}\" />"}}{{ end }}
+{{if .nugetpkgs }}{{.nugetpkgs | printf "        <add key=\"repositoryPath\" value=%[1]q />\n		<add key=\"globalPackagesFolder\" value=%[1]q />"}}{{ end }}
 		<add key="dependencyVersion" value="Highest" />
 	</config>
 	<packageSources>
