--- a/home/Documents/dot_Rprofile.tmpl
+++ b/home/Documents/dot_Rprofile.tmpl
@@ -12,8 +12,8 @@ local({
     # Enable script file names and line numbers for tryCatchLog
     keep.source = TRUE,
     Ncpus = parallel::detectCores(),
-    {{ if .mavendir}}    maven.home = "{{.mavendir}}",{{ end }}}}
-    {{ if .sparkdir}}    spark.install.dir = "{{.sparkdir}}",{{end}}
+{{ if .mavendir}}    maven.home = "{{.mavendir}}",{{ end }}
+{{ if .sparkdir}}    spark.install.dir = "{{.sparkdir}}",{{end}}
     warnPartialMatchAttr = TRUE,
     warnPartialMatchDollar = TRUE,
     warnPartialMatchArgs = TRUE,
