Update RStudio prefs.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -7,7 +7,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Shipwreck",
+    "editor_theme": "ayu mirage",
     "default_encoding": "UTF-8",
     "source_with_echo": true,
     "document_author": "Ajay Mehta",
@@ -42,5 +42,6 @@
     "visual_markdown_editing_show_margin": true,
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
-    "quarto_enabled": "enabled"
+    "quarto_enabled": "enabled",
+    "font_size_points": 12
 }
