Fix warning about locale.

--- a/home/Documents/dot_Renviron.tmpl
+++ b/home/Documents/dot_Renviron.tmpl
@@ -13,3 +13,5 @@ OSSINDEX_USER={{.email | lower | quote}}
 OSSINDEX_TOKEN={{ .apikey.ossindex }}
 
 {{if .cmdstandir }}CMDSTAN="{{ .cmdstandir }}"{{end}}
+
+LC_ALL = "en-US"
