--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -115,6 +115,8 @@
 	cmd = 'C:/Program Files/Beyond Compare 4/bcomp.exe' \"$LOCAL\" \"$REMOTE\"
 [difftool "winmerge"]
 	cmd = WinMergeU -u -e -x -fl -wl -wr -dl \"$LOCAL\" -dr \"$REMOTE\" \"$LOCAL\" \"$REMOTE\"
+[difftool "difftastic"]
+    cmd = difft "$LOCAL" "$REMOTE"
 [merge]
 	tool = winmerge
 	guitool = winmerge
