--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -17,7 +17,7 @@
     "console_double_click_select": true,
     "style_diagnostics": true,
     "rmd_viewer_type": "pane",
-    "windows_terminal_shell": "custom",
+    "{{ .chezmoi.os }}_terminal_shell": "custom",
     "custom_shell_command": "C:/Program Files/PowerShell/7/pwsh.exe",
     "jobs_tab_visibility": "shown",
     "cran_mirror": {
@@ -43,5 +43,6 @@
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
     "quarto_enabled": "enabled",
-    "font_size_points": 12
+    "font_size_points": 12,
+    "help_font_size_points": 12
 }
