--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -1,4 +1,4 @@
-PATH="${RTOOLS40_HOME}\usr\bin;${PATH};${RTOOLS40_HOME}\mingw64\bin{{if .cmdstandir }};{{ .cmdstandir }}/stan/lib/stan_math/lib/tbb{{end}}"
+PATH="${RTOOLS42_HOME}\usr\bin;${RTOOLS42_HOME}\ucrt64\bin;${RTOOLS42_HOME}\mingw64\bin;{{if .cmdstandir }}{{ .cmdstandir }}/stan/lib/stan_math/lib/tbb;{{end}}${PATH}"
 
 plotly_username={{ .name }}
 plotly_api_key={{ .apikey.plotly }}
@@ -13,5 +13,3 @@ OSSINDEX_USER={{.email | lower | quote}}
 OSSINDEX_TOKEN={{ .apikey.ossindex }}
 
 {{if .cmdstandir }}CMDSTAN="{{ .cmdstandir }}"{{end}}
-
-LC_ALL = "en-US"
