--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -150,6 +150,7 @@
 	diffFilter = delta --color-only --features=interactive
 [delta]
 	features = decorations my-line-numbers emph
+	light = false    # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
 	navigate = true
 	hyperlinks = true
 	whitespace-error-style = magenta reverse
