Update dot files.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -9,7 +9,6 @@
     "highlight_r_function_calls": true,
     "editor_theme": "ayu mirage",
     "default_encoding": "UTF-8",
-    "source_with_echo": true,
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
     "remove_history_duplicates": true,
@@ -43,6 +42,7 @@
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
     "quarto_enabled": "enabled",
-    "font_size_points": 12,
-    "help_font_size_points": 12
+    "font_size_points": 14,
+    "help_font_size_points": 12,
+    "source_with_echo": true
 }
