:wrench: Update configs.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -18,7 +18,7 @@
     "rmd_viewer_type": "pane",
     "{{ .chezmoi.os }}_terminal_shell": "custom",
     "custom_shell_command": "C:/Program Files/PowerShell/7/pwsh.exe",
-    "jobs_tab_visibility": "shown",
+    "jobs_tab_visibility": "closed",
     "cran_mirror": {
         "name": "Global (CDN)",
         "host": "RStudio",
