--- a/home/AppData/Roaming/NuGet/NuGet.Config.tmpl
+++ b/home/AppData/Roaming/NuGet/NuGet.Config.tmpl
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- https://docs.microsoft.com/en-us/nuget/reference/nuget-config-file -->
 <configuration>
 	<packageRestore>
@@ -13,7 +13,7 @@
 		<add key="dependencyVersion" value="Highest" />
 	</config>
 	<packageSources>
-		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" />
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" protocolVersion="3" validated="True" trusted="True" />
 	</packageSources>
 	<packageSourceCredentials />
 	<packageManagement>
