:wrench: Update config.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -18,7 +18,7 @@
     "rmd_viewer_type": "pane",
     "{{ .chezmoi.os }}_terminal_shell": "custom",
     "custom_shell_command": "C:/Program Files/PowerShell/7/pwsh.exe",
-    "jobs_tab_visibility": "closed",
+    "jobs_tab_visibility": "shown",
     "cran_mirror": {
         "name": "Global (CDN)",
         "host": "RStudio",
@@ -41,8 +41,6 @@
     "visual_markdown_editing_show_margin": true,
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
-    "quarto_enabled": "enabled",
     "font_size_points": 14,
-    "help_font_size_points": 12,
-    "source_with_echo": true
+    "help_font_size_points": 12
 }
