--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -13,3 +13,4 @@ OSSINDEX_USER={{.email | lower | quote}}
 OSSINDEX_TOKEN={{ .apikey.ossindex }}
 
 {{if .cmdstandir }}CMDSTAN="{{ .cmdstandir }}"{{end}}
+{{if .quartopath }}QUARTO_PATH="{{ .quartopath }}"{{end}}
