Update RStudip prefs.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -42,5 +42,7 @@
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
     "font_size_points": 14,
-    "help_font_size_points": 12
+    "help_font_size_points": 12,
+    "sync_files_pane_working_dir": true,
+    "source_with_echo": true
 }
