--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -164,6 +164,7 @@
 	plus-style = "syntax #003800"
 	minus-style = "syntax #3f0001"
 	syntax-theme = TwoDark
+	map-styles = bold purple => syntax magenta, bold cyan => syntax blue
 [delta "interactive"]
     keep-plus-minus-markers = false
 [delta "sideways"]
