--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -7,7 +7,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "ayu mirage",
+    "editor_theme": "Material Monokai",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -41,8 +41,7 @@
     "visual_markdown_editing_show_margin": true,
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
-    "font_size_points": 14,
+    "font_size_points": 16,
     "help_font_size_points": 12,
-    "sync_files_pane_working_dir": true,
     "source_with_echo": true
 }
