Use GitHub email address.

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -1,6 +1,6 @@
 [user]
 	name = {{ .name }}
-	email = {{ .email }}
+	email = 11180071+AjayKMehta@users.noreply.github.com
 	signingkey = {{ .gpgkey }}
 [core]
 	excludesFile = C:/Users/Ajay/.gitignore
