--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -152,7 +152,9 @@
 	clean = git-lfs clean -- %f
 	smudge = git-lfs smudge -- %f
 [interactive]
-	diffFilter = delta --color-only --features=interactive
+	diffFilter = delta --color-only
+[add.interactive]
+    useBuiltin = false # required for git 2.37.0
 [delta]
 	features = decorations my-line-numbers emph
 	light = false    # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
