Update dot files.

--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -14,3 +14,4 @@ OSSINDEX_TOKEN={{ .apikey.ossindex }}
 
 {{if .cmdstandir }}CMDSTAN="{{ .cmdstandir }}"{{end}}
 {{if .quartopath }}QUARTO_PATH="{{ .quartopath }}"{{end}}
+{{if .condapath}}RETICULATE_MINICONDA_PATH="{{ .condapath }}"{{end}}
