--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -43,5 +43,6 @@
     "doc_outline_show": "sections_and_chunks",
     "font_size_points": 16,
     "help_font_size_points": 12,
-    "source_with_echo": true
+    "source_with_echo": true,
+    "sync_files_pane_working_dir": true
 }
