--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -3,7 +3,7 @@
 	email = {{ .email }}
 	signingkey = {{ .gpgkey }}
 [core]
-	excludesFile = C:/Users/Ajay/.gitignore
+	excludesFile = {{ .chezmoi.homeDir }}/.gitignore
 	editor = 'C:/Program Files/Notepad++/Notepad++.exe' -multiInst -notabbar -nosession -noPlugin
 	pager = less -rFX
 	whitespace = trailing-space,tab-in-indent,tabwidth=4
@@ -16,6 +16,7 @@
 	fsyncMethod = batch
 [include]
 	path = themes.gitconfig
+	path = delta.gitconfig
 	path = maintenance.gitconfig
 [pretty]
 	extended = format:%C(bold blue)%h% C(dim white)- %an %C(bold green)%ad%C(auto)%d%n %C(bold white)%s
@@ -169,52 +170,6 @@
 	minus-style = "syntax #3f0001"
 	syntax-theme = TwoDark
 	map-styles = bold purple => syntax magenta, bold cyan => syntax blue
-[delta "interactive"]
-    keep-plus-minus-markers = false
-[delta "sideways"]
-	side-by-side = true
-	line-numbers-left-style = cyan
-	line-numbers-right-style = cyan
-	line-numbers-minus-style = 124
-	line-numbers-plus-style = 28
-[delta "highlight"]
-	diff-highlight = true
-[delta "so-fancy"]
-	diff-so-fancy = true
-[delta "var-width"]
-	width = variable
-[delta "light"]
-	plus-style = "green bold ul #ffeeee"
-	minus-style = "red bold ul #ffeeee"
-[delta "decorations"]
-    commit-decoration-style = blue ol
-    commit-style = raw
-    file-style = omit
-    hunk-header-decoration-style = blue box
-    hunk-header-file-style = red
-    hunk-header-line-number-style = "#067a00"
-    hunk-header-style = file line-number syntax
-[delta "emph"]
-	minus-emph-style = "#A92211 bold #ffeadd"
-	plus-emph-style = "#003A0A bold #ffeadd"
-[delta "unobtrusive-line-numbers"]
-	line-numbers = true
-	line-numbers-minus-style = "#444444"
-	line-numbers-zero-style = "#444444"
-	line-numbers-plus-style = "#444444"
-	line-numbers-left-format = {nm:>4}┊
-	line-numbers-right-format = {np:>4}│
-	line-numbers-left-style = blue
-	line-numbers-right-style = blue
-[delta "my-line-numbers"]
-	line-numbers = true
-	line-numbers-minus-style = red
-	line-numbers-zero-style = "#FFF000"
-	line-numbers-plus-style = green
-	line-numbers-left-format = {nm:>4}┊
-	line-numbers-right-format = {np:>4}│
-	line-numbers-left-style = blue
-	line-numbers-right-style = blue
 [tag]
 	sort = version:refname
 [commit]
