Update rstudio config.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -1,13 +1,12 @@
 {
     "highlight_selected_line": true,
-    "show_indent_guides": true,
     "continue_comments_on_newline": true,
     "check_arguments_to_r_function_calls": true,
     "auto_append_newline": true,
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Material Monokai",
+    "editor_theme": "Vibrant Ink",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
