--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -5,7 +5,7 @@
 [core]
 	excludesFile = {{ .chezmoi.homeDir }}/.gitignore
 	editor = 'C:/Program Files/Notepad++/Notepad++.exe' -multiInst -notabbar -nosession -noPlugin
-	pager = less -rFX
+	pager = less -RFX
 	whitespace = trailing-space,tab-in-indent,tabwidth=4
 	splitIndex = true
 	untrackedCache = true
