--- a/home/dot_Rprofile.tmpl
+++ b/home/dot_Rprofile.tmpl
@@ -59,6 +59,27 @@ local({
       }
     }
 
+    if (requireNamespace("progressr", quietly = TRUE)) {
+      ## progressr reporting without need for with_progress()
+      progressr::handlers(global = TRUE)
+
+      ## Use 'cli', if installed ...
+      if (requireNamespace("cli", quietly = TRUE)) {
+        progressr::handlers("cli")
+        ## Hand over all 'cli' progress reporting to 'progressr'
+        options(cli.progress_handlers = "progressr")
+      } else {
+        ## ... otherwise use the one that comes with R
+        progressr::handlers("txtprogressbar")
+      }
+      ## Reporting via RStudio, if running in the RStudio Console,
+      ## but not the terminal
+      if ((Sys.getenv("RSTUDIO") == "1") &&
+        !nzchar(Sys.getenv("RSTUDIO_TERM"))) {
+        progressr::handlers("rstudio", append = TRUE)
+      }
+    }
+
     # https://www.tidyverse.org/articles/2019/01/rlang-0-3-1/
     if (requireNamespace("rlang", quietly = TRUE)) {
       options(error = rlang::entrace)
