Update SSH setting.

--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -14,6 +14,7 @@
 	fsmonitor = true
 	fsync = committed,added,commit-graph
 	fsyncMethod = batch
+	sshCommand = ssh -q
 [include]
 	path = themes.gitconfig
 	path = delta.gitconfig
