--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -42,5 +42,5 @@
     "doc_outline_show": "sections_and_chunks",
     "font_size_points": 16,
     "help_font_size_points": 12,
-    "source_with_echo": true
+    "pdf_previewer": "none"
 }
