Update config files.

--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "Vibrant Ink",
+    "editor_theme": "MultiLanger-Dark_Inverted",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -42,5 +42,7 @@
     "doc_outline_show": "sections_and_chunks",
     "font_size_points": 16,
     "help_font_size_points": 12,
-    "pdf_previewer": "none"
+    "pdf_previewer": "none",
+    "source_with_echo": true,
+    "default_latex_program": "XeLaTeX"
 }
