--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -46,6 +46,8 @@
 	show-rd = show --remerge-diff
 	ss = stash --staged
 	alias = config --get-regexp ^alias\\.
+	untracked = ls-files --others --exclude-standard
+	unstage = restore --staged
 
 	## Push to remote
 	please = push --force-with-lease
@@ -202,6 +204,8 @@
 	credentialsInUrl = warn
 [gc]
 	cruftPacks = true
+[log]
+	date = rfc
 [safe]
 	{{- $safe := split "\n" (output "git" "config" "--get-all" "safe.directory" | trim) }}
 	{{range $x := $safe}}{{ if gt (len (trim $x)) 0}}directory = {{$x}}{{end}}
