--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -6,7 +6,7 @@
     "strip_trailing_whitespace": true,
     "syntax_color_console": true,
     "highlight_r_function_calls": true,
-    "editor_theme": "MultiLanger-Dark_Inverted",
+    "editor_theme": "Blue Thunder",
     "default_encoding": "UTF-8",
     "document_author": "Ajay Mehta",
     "show_rmd_render_command": true,
@@ -44,5 +44,7 @@
     "help_font_size_points": 12,
     "pdf_previewer": "none",
     "source_with_echo": true,
-    "default_latex_program": "XeLaTeX"
+    "default_latex_program": "XeLaTeX",
+    "sync_files_pane_working_dir": true,
+    "show_terminal_tab": false
 }
