Set RSTUDIO_PANDOC for VS Code.

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -23,7 +23,7 @@
 
 {{- $cmdstandir := promptStringOnce . "cmdstandir" "Directory where cmdstan is installed." -}}
 
-{{- $quartopath := promptStringOnce . "quartopath" "Installation path for quarto." -}}
+{{- $quartopath := promptStringOnce . "quartopath" "Bin folder path for quarto." -}}
 
 {{- $kdbxpath := promptStringOnce . "kdbxpath" "Path for Keepass database" -}}
 
