--- a/home/dot_Renviron.tmpl
+++ b/home/dot_Renviron.tmpl
@@ -13,7 +13,8 @@ OSSINDEX_USER={{- (keepassxc "OSSINDEX").UserName | quote }}
 OSSINDEX_TOKEN={{- (keepassxc "OSSINDEX").Password }}
 
 {{if .cmdstandir }}CMDSTAN="{{- .cmdstandir }}"{{end}}
-{{if .quartopath }}QUARTO_PATH="{{- .quartopath }}"{{end}}
+{{if .quartopath }}QUARTO_PATH="{{- .quartopath -}}/quarto.cmd"{{end}}
+{{if .quartopath }}RSTUDIO_PANDOC="{{- .quartopath -}}/tools"{{end}}
 {{if .condapath }}RETICULATE_MINICONDA_PATH="{{- .condapath }}"{{end}}
 
 LC_COLLATE=English_United States.utf8
