--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -162,7 +162,7 @@
 	diffFilter = delta --color-only
 [delta]
 	features = decorations my-line-numbers emph
-	light = false    # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+	light = false    # set to true if you're in a terminal w/ a light background color
 	navigate = true
 	hyperlinks = true
 	whitespace-error-style = magenta reverse
