--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -34,7 +34,6 @@
     "tab_multiline_completion": true,
     "show_diagnostics_other": true,
     "show_doc_outline_rmd": true,
-    "graphics_backend": "ragg",
     "warn_variable_defined_but_not_used": true,
     "auto_detect_indentation": true,
     "visual_markdown_editing_show_margin": true,
@@ -46,5 +45,5 @@
     "source_with_echo": true,
     "default_latex_program": "XeLaTeX",
     "sync_files_pane_working_dir": true,
-    "show_terminal_tab": false
+    "graphics_backend": "ragg"
 }
