--- a/home/dot_gitconfig.tmpl
+++ b/home/dot_gitconfig.tmpl
@@ -47,6 +47,7 @@
     alias = config --get-regexp ^alias\\.
     untracked = ls-files --others --exclude-standard
     unstage = restore --staged
+    cnv = commit --no-verify
 
     ## Push to remote
     please = push --force-with-lease
