--- a/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
+++ b/home/AppData/Roaming/RStudio/rstudio-prefs.json.tmpl
@@ -39,11 +39,11 @@
     "visual_markdown_editing_show_margin": true,
     "visual_markdown_code_editor_line_numbers": true,
     "doc_outline_show": "sections_and_chunks",
-    "font_size_points": 16,
+    "font_size_points": 12,
     "help_font_size_points": 12,
     "pdf_previewer": "none",
     "source_with_echo": true,
     "default_latex_program": "XeLaTeX",
-    "sync_files_pane_working_dir": true,
-    "graphics_backend": "ragg"
+    "graphics_backend": "ragg",
+    "sync_files_pane_working_dir": true
 }
